JVM Learn project: JVM 常用参数回顾学习、四大引用学习